syntax = "proto3";

option csharp_namespace = "EasilyNET.Raft.Transport.Grpc.Protos";

package easilynet.raft;

service RaftRpc {
  rpc RequestVote (RequestVoteRpcRequest) returns (RequestVoteRpcResponse);
  rpc AppendEntries (AppendEntriesRpcRequest) returns (AppendEntriesRpcResponse);
  rpc InstallSnapshot (InstallSnapshotRpcRequest) returns (InstallSnapshotRpcResponse);
  rpc InstallSnapshotStream (stream InstallSnapshotChunkRpcRequest) returns (InstallSnapshotRpcResponse);
}

message LogEntryRpc {
  int64 index = 1;
  int64 term = 2;
  bytes command = 3;
}

message RequestVoteRpcRequest {
  string source_node_id = 1;
  int64 term = 2;
  string candidate_id = 3;
  int64 last_log_index = 4;
  int64 last_log_term = 5;
  bool is_pre_vote = 6;
}

message RequestVoteRpcResponse {
  string source_node_id = 1;
  int64 term = 2;
  bool vote_granted = 3;
  bool is_pre_vote = 4;
}

message AppendEntriesRpcRequest {
  string source_node_id = 1;
  int64 term = 2;
  string leader_id = 3;
  int64 prev_log_index = 4;
  int64 prev_log_term = 5;
  repeated LogEntryRpc entries = 6;
  int64 leader_commit = 7;
}

message AppendEntriesRpcResponse {
  string source_node_id = 1;
  int64 term = 2;
  bool success = 3;
  int64 match_index = 4;
  int64 conflict_term = 5;
  int64 conflict_index = 6;
  bool has_conflict_term = 7;
  bool has_conflict_index = 8;
}

message InstallSnapshotRpcRequest {
  string source_node_id = 1;
  int64 term = 2;
  string leader_id = 3;
  int64 last_included_index = 4;
  int64 last_included_term = 5;
  bytes snapshot_data = 6;
}

message InstallSnapshotRpcResponse {
  string source_node_id = 1;
  int64 term = 2;
  bool success = 3;
}

message InstallSnapshotChunkRpcRequest {
  string source_node_id = 1;
  int64 term = 2;
  string leader_id = 3;
  int64 last_included_index = 4;
  int64 last_included_term = 5;
  bytes chunk_data = 6;
  int64 offset = 7;
  bool is_last_chunk = 8;
}
